# repo_visualizer

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: block-dangerous.sh  lint-on-edit.sh  run-tests-on-stop.sh
src/repo_visualizer/: __init__.py  __main__.py  analyzer.py  cli.py  config.py  graph.py  mcp_server.py  renderer.py  scanner.py  smells.py  summarizer.py  template.html
